    directory with all required dependencies, might be useful to others
  * Now using grub2
  * Fixed typos in pypack
  * Updated grubutil to rev 31
  * Add grub modules in correct order
  * Fixed grub.cfg files
  * Ignore '-' in distro name (thanks Evan Dandrea)
  * Fixed typos in tasklist
  * Grub modules have been renamed upstream
  * Allow booting via the grub2 loopmount module

  [ Michael Casadevall ]
  * Added support for UNR
  * Modified isolist.ini to represent new casper filename; capser.lz for lzma
    compressed initramfses

  [ Evan Dandrea ]
  * Add support for Kubuntu Netbook Edition (LP: #402850).
  * Fix typos for netbook images in data/isolist.ini.
  * Support dashes in project names.  Thanks Steve Kowalik!
  * Factor in free space on the source device when calculating whether
    it's too big to use Wubi with.  This fixes using Wubi on
    sufficiently large USB disks.
  * Kubuntu Netbook Edition is now Kubuntu Netbook.
  * Use i386 if an amd64 version of the selected distribution does not
    exist.
  * Use the correct syntax for grub2 (elif does not exist).  Thanks to
    Colin Watson for the tip.

  [ Colin Watson ]
  * Use "new" simplified partman preseeding (actually available since
    hardy).

 -- Agostino Russo <agostino.russo@gmail.com>  Sat, 12 Sep 2009 15:28:14 +0100

wubi (9.04) jaunty; urgency=low

  [ Agostino Russo ]
  * Initial revision
  * Hello world, we have a window showing
  * Fixed loop on quit
  * Fixed tools
  * Added logging support
  * Reorganized commandline arguments
  * Improved progress object
  * Added data dir
  * Added win32 wizard base page class
  * Added mappings
  * Initial win32 page layout
  * Using basic window as panel
  * Refactored shared_backend.py into common/backend.py & friends
  * Added metalink parser
  * Removed testing metalink code
  * Added progress page
  * Improved quit mechanism
  * Added tasklist as a more general replacement of the progress object
  * Revised tool scripts