@@ -76,7 +76,7 @@ winboot2: grubutil
 	cp -f data/wubildr.cfg build/winboot/wubildr.cfg
 	./build/grubutil/grubinst/grubinst --grub2 --boot-file=wubildr -o build/winboot/wubildr.mbr
 	grub-mkimage -c build/winboot/wubildr.cfg -o build/grubutil/core.img \
-		biosdisk part_msdos part_gpt fat ntfs ext2 ntfscomp iso9660 loopback search linux boot minicmd cat cpuid chain halt help ls reboot \
+		loadenv biosdisk part_msdos part_gpt fat ntfs ext2 ntfscomp iso9660 loopback search linux boot minicmd cat cpuid chain halt help ls reboot \
 		echo test configfile sh sleep
 	cat /usr/lib/grub/i386-pc/lnxboot.img build/grubutil/core.img > build/winboot/wubildr
 
