@@ -13,27 +13,27 @@ echo
 search -s -f -n $(kernel)
 
 menuentry "$(normal_mode_title)" {
-    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt quiet splash  boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
+    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt quiet splash  boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility) $(rootflags)
     initrd $(initrd)
 }
 
 menuentry "$(safe_graphic_mode_title)" {
-    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt quiet splash  boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
+    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt quiet splash  boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)  $(rootflags)
     initrd $(initrd)
 }
 
 menuentry "$(acpi_workarounds_title)" {
-    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt debug debug-ubiquity boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility) acpi=off noapic nolapic
+    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt debug debug-ubiquity boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)  $(rootflags) acpi=off noapic nolapic
     initrd $(initrd)
 }
 
 menuentry "$(verbose_mode_title)" {
-    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt debug debug-ubiquity boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
+    linux $(kernel) debian-installer/custom-installation=$(custom_installation_dir) iso-scan/filename=$(iso_path) automatic-ubiquity noprompt debug debug-ubiquity boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)  $(rootflags)
     initrd $(initrd)
 }
 
 menuentry "$(demo_mode_title)" {
-    linux $(kernel) iso-scan/filename=$(iso_path) quiet splash boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility)
+    linux $(kernel) iso-scan/filename=$(iso_path) quiet splash boot=casper ro debian-installer/locale=$(locale) console-setup/layoutcode=$(keyboard_layout) console-setup/variantcode=$(keyboard_variant) -- $(accessibility) $(rootflags)
     initrd $(initrd)
 }
 
