@@ -1,28 +1,33 @@
-if search -s -f -n /ubuntu/disks/root.disk; then
-    set show_panic_message=true
-    if loopback loop0 /ubuntu/disks/root.disk; then
-        set root=(loop0)
-        if [ -e /boot/grub/grub.cfg ]; then
-            set show_panic_message=false
-            configfile /boot/grub/grub.cfg
-        fi
-    fi
-    if [ $show_panic_message = true ]; then
-        echo "It is not possible to boot from the Ubuntu image."
-        echo "The Windows partition might be corrupted."
-        echo "Please reboot into Windows and run: chkdisk /r"
-        echo "Then try again."
+set show_panic_message=true
+
+if search -s -f -n /ubuntu/install/boot/grub/grub.cfg; then
+    if configfile /ubuntu/install/boot/grub/grub.cfg; then
+        set show_panic_message=false
     fi
 else
-    if search -s -f -n /ubuntu/install/boot/grub/grub.cfg; then
-        configfile /ubuntu/install/boot/grub/grub.cfg
+    if search -s -f -n /ubuntu/disks/root.disk; then
+        if loopback loop0 /ubuntu/disks/root.disk; then
+            set root=(loop0)
+            if search --set=loop -f -n /boot/grub/grub.cfg; then
+                if configfile /boot/grub/grub.cfg; then
+                    set show_panic_message=false
+                fi
+            fi
+        fi
     else
         if search -s -f -n /grub.cfg; then
-            configfile /grub.cfg
-        else
-            echo "Could not find a boot configuration for Ubuntu."
-            echo "Please verify that the Ubuntu installation was not removed."
+            if configfile /grub.cfg; then
+                set show_panic_message=false
+            fi
         fi
     fi
+fi
+
+if [ $show_panic_message = true ]; then
+    echo "It is not possible to boot from the Ubuntu image."
+    echo "Please verify that the Ubuntu installation was not removed."
+    echo "If that is not the case, please check that the Windows filesystem"
+    echo "is not corrupted: reboot into Windows and run: chkdisk /r"
+    echo "Then try again."
 fi
 
